package meta;

message Meta {
  enum Type { PING = 0; NODE = 1; }
  required Type t = 1;
  message Node {
    required bytes ip = 1;
    required int32 port = 2;
  }
  repeated Node nodes = 2;
}

message MetaRes
{
  message Node {
    required bytes ip = 1;
    required int32 port = 2;
  }
  repeated Node nodes = 1;
}
